# vc2

./: .env.example  .gitignore  README.md  engineering_decisions.md  git_diff_stat_after_sync.txt  git_status_after_sync.txt  grill_me_interview_record.md  prompt.md  pyproject.toml  system_doc.md
.github/workflows/: ci.yml
client/: app.js  index.html
config/: dev.yaml  prod.yaml
scripts/: download_models.py  start.ps1
src/voice_agent/: __init__.py  __main__.py  cli.py  config.py  frames.py  logging_config.py  protocols.py
src/voice_agent/agent/: barge_in.py  pipeline.py  state_machine.py
src/voice_agent/audio/: __init__.py  preprocessing.py
src/voice_agent/llm/: chunker.py
src/voice_agent/memory/: session_memory.py
src/voice_agent/metrics/: collector.py
src/voice_agent/stt/: __init__.py  faster_whisper_adapter.py
src/voice_agent/transport/: livekit_adapter.py
src/voice_agent/tts/: __init__.py  piper_adapter.py
tests/: conftest.py
tests/integration/: test_llm_adapter.py
tests/unit/: test_barge_in.py  test_chunker.py  test_conversation_controller.py  test_memory.py  test_state_machine.py  test_stt_turns.py  test_tts_frames.py
