[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-agent"
version = "0.1.0"
description = "Windows real-time voice conversation agent"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Core pipeline
    "pipecat-ai[livekit,silero,openai]>=0.0.60",
    # STT
    "faster-whisper>=1.0.0",
    # TTS
    "piper-tts>=1.2.0",
    # LLM
    "openai>=1.30.0",
    # Transport
    "livekit>=0.17.0",
    "livekit-api>=0.7.0",
    # Logging
    "structlog>=24.1.0",
    # Config / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    # Audio
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    # Token counting
    "tiktoken>=0.7.0",
    # HTTP server
    "aiohttp>=3.9.0",
    # ONNX runtime (for Silero VAD)
    "onnxruntime>=1.18.0",
    "pytest>=9.0.3",
    "respx>=0.23.1",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "respx>=0.21.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12",
    "types-aiofiles>=23.2.0",
]

[project.scripts]
voice-agent = "voice_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (run with '-m integration', skipped in CI)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false
